# profile-insights

./: .gitignore  Cargo.toml  README.md  docker-compose.yml
.cargo/: config.toml
apps/rust-server/: Cargo.toml
apps/rust-server/migrations/: 20251123140300_wantedly_init_profile_insights.sql
apps/rust-server/src/: error.rs  main.rs
apps/rust-server/src/infra/: json_loader.rs  mod.rs
apps/rust-server/src/infra/usecase/: import_wantedly_profile_views.rs  mod.rs
apps/rust-server/src/infra/wantedly/: converter.rs  dto.rs  json.rs  mod.rs
apps/rust-server/src/routes/: echo.rs  health.rs  hello.rs  mod.rs
crates/storage/: Cargo.toml
crates/storage/src/: lib.rs  prelude.rs
crates/storage/src/wantedly/: companies.rs  impressions.rs  mod.rs  raw.rs  viewers.rs
docker/postgres/: Dockerfile
docker/rust/: Dockerfile
local_data/: README.md
scripts/: reset.sh
