[package]
name = "storage"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlx = {version = "0.8.6", features = ["runtime-tokio", "postgres", "chrono", "json", "macros"] }
thiserror = "2.0.17"
